// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ConversationView streaming matches the expected frames as a message streams in: 01-user-turn 1`] = `
"┌─Claude Code──────────────────────────────────────────────────────────┐
│ you                                                                  │
│ hi                                                                   │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
 ▸ Claude Code: idle    Codex: idle                  ^O switch  F1 help 
"
`;

exports[`ConversationView streaming matches the expected frames as a message streams in: 02-first-chunk 1`] = `
"┌─Claude Code──────────────────────────────────────────────────────────┐
│ you                                                                  │
│ hi                                                                   │
│                                                                      │
│ agent                                                                │
│ Hello                                                                │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
 ▸ Claude Code: idle    Codex: idle                  ^O switch  F1 help 
"
`;

exports[`ConversationView streaming matches the expected frames as a message streams in: 03-settled 1`] = `
"┌─Claude Code──────────────────────────────────────────────────────────┐
│ you                                                                  │
│ hi                                                                   │
│                                                                      │
│ agent                                                                │
│ Hello, world.                                                        │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
 ▸ Claude Code: idle    Codex: idle                  ^O switch  F1 help 
"
`;
